Updated network code to work with the OkHttp/Otto combination.